tests/test_resources/invalid_syntax_tests/invalid_match_case.pytest
# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree

## cannot use general expression in place of a case pattern
match xx:
    case x>2:
        pass
